--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     def nav_version = "2.5.3"
     implementation("androidx.navigation:navigation-compose:$nav_version")
+    implementation 'com.github.SteliosPapamichail:CreditCardHelper:v1.0.0'
 }
